--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -43,6 +43,17 @@
   }) }}
 {% endblock %}
 
+
+{% block beforeContent %}
+{{ govukPhaseBanner({
+  tag: {
+    text: "alpha"
+  },
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+}) }}
+{% endblock %}
+
+
 {% if useAutoStoreData %}
   {% block footer %}
     {{ govukFooter({
